# codility_solutions

./: CMakeLists.txt  README.md
python_solutions/: BirdGrid.py  Brackets.py  MaxDoubleSliceSum.py  NumberOfDiscIntersections.py  PassingCars.py  fibonacci.py  min_abs_sum.py
solutions/: CountDiv.cpp  GenomicRangeQuery.cpp  MaxCounters.cpp  MaxCounters.hpp  MissingInteger.cpp  PermCheck.cpp  main.cpp  solutions.hpp
tests/: CMakeLists.txt  test_CountDiv.cpp  test_GenomicRangeQuery.cpp  test_MaxCounters.cpp  test_MissingInteger.cpp  test_PermCheck.cpp
